--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <img src="assets/img/team/team-1_rg.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/tomas.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Thomas Sugara</h4>
