--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/kejaksaan.jpg" rel="icon">
-  <link href="assets/img/kejaksaan.jpg" rel="apple-touch-icon">
+  <link href="assets/img/kejaksaan.png" rel="icon">
+  <link href="assets/img/kejaksaan.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
